[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/Level/Level.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Level/VideoPlayer.gd" type="Script" id=2]
[ext_resource path="res://Assets/background/space_backgr.ogv" type="VideoStream" id=3]
[ext_resource path="res://Assets/Fonts/RobotoMono-VariableFont_wght.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Graphics/Shader/TriangleTexture.gdshader" type="Shader" id=5]
[ext_resource path="res://Assets/background/fertig.png" type="Texture" id=6]
[ext_resource path="res://Assets/background/hint.png" type="Texture" id=7]
[ext_resource path="res://Scripts/Level/LevelBtn.gd" type="Script" id=8]

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 5 )
shader_param/thickness = 0.924
shader_param/size = 1.0
shader_param/color1 = Vector3( 0.3, 0.3, 0.3 )
shader_param/color2 = Vector3( 0.2, 0.2, 0.2 )

[sub_resource type="NoiseTexture" id=5]

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=10]
default_font = SubResource( 9 )

[sub_resource type="DynamicFont" id=8]
size = 40
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=13]
size = 24
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 12 )

[node name="Level" type="Node2D" groups=["Dynamic_Scene"]]
z_index = -2
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ 699.0 ]
}
margin = 160.0
nodes = 12
edges = 17
minimal_weight = 1.0

[node name="VideoPlayer" type="VideoPlayer" parent="."]
margin_right = 1024.0
margin_bottom = 608.0
mouse_filter = 2
stream = ExtResource( 3 )
autoplay = true
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
material = SubResource( 4 )
position = Vector2( 512, 512 )
scale = Vector2( 2, 2 )
z_index = -1
texture = SubResource( 5 )

[node name="ReadyLabel" type="Label" parent="."]
margin_right = 160.0
margin_bottom = 72.0
theme = SubResource( 10 )
custom_colors/font_color = Color( 0.470588, 0.470588, 0.470588, 1 )
custom_fonts/font = SubResource( 8 )

[node name="VBoxContainer" type="HBoxContainer" parent="."]
margin_top = 504.0
margin_right = 1024.0
margin_bottom = 592.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_right = 180.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_left = 184.0
margin_right = 436.0
margin_bottom = 88.0
size_flags_horizontal = 3

[node name="Optimal" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 252.0
margin_bottom = 37.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 13 )
text = "Optimaler Wert: 24"

[node name="YourV" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 252.0
margin_bottom = 83.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 13 )
text = "Euer Wert: 36"

[node name="OKBtn" type="Button" parent="VBoxContainer"]
margin_left = 440.0
margin_right = 500.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 8 )
text = "OK"

[node name="FinishedBtn" type="TextureButton" parent="VBoxContainer" groups=["Level_Button"]]
margin_left = 504.0
margin_right = 839.0
margin_bottom = 88.0
texture_normal = ExtResource( 6 )
texture_disabled = ExtResource( 6 )
script = ExtResource( 8 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_left = 843.0
margin_right = 1024.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer2" type="HBoxContainer" parent="."]
margin_top = 16.0
margin_right = 1024.0
margin_bottom = 104.0

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer2"]
margin_right = 336.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control" type="Control" parent="VBoxContainer2"]
margin_left = 340.0
margin_right = 676.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Hint" type="TextureButton" parent="VBoxContainer2/Control" groups=["Level_Button"]]
anchor_right = 0.994
anchor_bottom = 1.0
margin_right = 0.0220032
rect_rotation = -180.0
rect_pivot_offset = Vector2( 167, 44 )
theme = SubResource( 7 )
texture_normal = ExtResource( 7 )
texture_disabled = ExtResource( 7 )
script = ExtResource( 8 )
__meta__ = {
"_editor_description_": "Protoytype Button to test graph generation"
}

[node name="Control3" type="Control" parent="VBoxContainer2"]
margin_left = 680.0
margin_right = 680.0
margin_bottom = 88.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2/Control3"]
margin_left = 63.0
margin_top = 88.0
margin_right = 315.0
margin_bottom = 176.0
rect_rotation = 180.0
size_flags_horizontal = 3

[node name="Optimal" type="Label" parent="VBoxContainer2/Control3/VBoxContainer"]
margin_top = 4.0
margin_right = 252.0
margin_bottom = 37.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 13 )
text = "Optimaler Wert: 24"

[node name="YourV" type="Label" parent="VBoxContainer2/Control3/VBoxContainer"]
margin_top = 50.0
margin_right = 252.0
margin_bottom = 83.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 13 )
text = "Euer Wert: 36"

[node name="Control2" type="Control" parent="VBoxContainer2"]
margin_left = 684.0
margin_right = 684.0
margin_bottom = 88.0

[node name="OKBtn" type="Button" parent="VBoxContainer2/Control2"]
anchor_bottom = 0.551
margin_left = -211.0
margin_top = 76.0
margin_right = -151.0
margin_bottom = 86.512
rect_rotation = 180.0
custom_fonts/font = SubResource( 8 )
text = "OK"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2"]
margin_left = 688.0
margin_right = 1024.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_lock_": true
}

[node name="ReadyLabel" type="Label" parent="."]
margin_left = 656.0
margin_top = 504.0
margin_right = 816.0
margin_bottom = 576.0
theme = SubResource( 10 )
custom_colors/font_color = Color( 0.470588, 0.470588, 0.470588, 1 )
custom_fonts/font = SubResource( 8 )

[connection signal="pressed" from="VBoxContainer/OKBtn" to="." method="_on_OKBtn_pressed"]
[connection signal="button_up" from="VBoxContainer/FinishedBtn" to="." method="_on_FinishedBtn_pressed"]
[connection signal="pressed" from="VBoxContainer2/Control/Hint" to="." method="_on_Hint_pressed"]
[connection signal="pressed" from="VBoxContainer2/Control2/OKBtn" to="." method="_on_OKBtn_pressed"]
